terminata struttura aggiuna di css

--- a/index.html
+++ b/index.html
@@ -9,21 +9,16 @@
 </head>
 <body>
     <header>
-        <img src="img/pattern.png" alt="Pattern">
-        <img src="img/logo.svg" alt="Logo" width="500" height="600">
-    </header>
-
-    <header>
         <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-        <p>Scritto da The Booleaner</p>
-        <p>il 10/10/2020</p>
+        <p class="intestazione">Scritto da <a href="the_booleaner.html">The Booleaner</a></p>
+        <p class="intestazione2">il 10/10/2020</p>
     </header>
 
     <main>
         <img src="img/tim-1.jpg" alt="tim1">
         <img src="img/tim-2.jpg" alt="tim2">
-        <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
-        <p>2nd Photo: Wikimedia, by Paul Clarke</p>
+        <p class="footer-foto">1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
+        <p class="footer-foto">2nd Photo: Wikimedia, by Paul Clarke</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio consequatur, amet dicta deserunt, nisi explicabo quia ipsa doloribus, temporibus soluta molestias magnam saepe animi reiciendis natus cum numquam officia dolorum.</p>
 
         <ul>
