--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Booleaner</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div>
+        <img class="logo" src="img/logo.svg" alt="" width="400px" height="175px">
+    </div>
     <header>
         <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
         <p class="intestazione">Scritto da <a href="the_booleaner.html">The Booleaner</a></p>
@@ -19,7 +23,7 @@
         <img src="img/tim-2.jpg" alt="tim2">
         <p class="footer-foto">1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
         <p class="footer-foto">2nd Photo: Wikimedia, by Paul Clarke</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio consequatur, amet dicta deserunt, nisi explicabo quia ipsa doloribus, temporibus soluta molestias magnam saepe animi reiciendis natus cum numquam officia dolorum.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio consequatur,<span>dicta deserunt, nisi explicabo quia ipsa doloribus</span>,temporibus soluta molestias magnam saepe animi reiciendis natus cum numquam officia dolorum.</p>
 
         <ul>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex nemo nisi consequuntur possimus suscipit sit iusto quidem dignissimos inventore ipsam cumque voluptatum odio, consectetur nostrum eaque officia error. Possimus, unde?</li>
@@ -35,32 +39,30 @@
                     <td>Lorem ipsum dolor</td>
                 </tr>
             </thead>
-            <tr>
-                <td>Lorem ipsum dolor</td>
-                <td>Lorem ipsum dolor</td>
-                <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, consequuntur vero! Pariatur ut in expedita adipisci, impedit vero nemo obcaecati aspernatur distinctio vitae, iste laborum reiciendis, nobis eveniet modi dolorem?</td>
+            <tr class="colorata">
+                <td class="righe">Lorem ipsum dolor</td>
+                <td class="righe">Lorem ipsum dolor</td>
+                <td class="righe">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, consequuntur vero! Pariatur ut in expedita adipisci, impedit vero nemo obcaecati aspernatur distinctio vitae, iste laborum reiciendis, nobis eveniet modi dolorem?</td>
             </tr>
             <tr>
-                <td>Lorem ipsum dolor</td>
-                <td>Lorem ipsum dolor</td>
-                <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, consequuntur vero! Pariatur ut in expedita adipisci, impedit vero nemo obcaecati aspernatur distinctio vitae, iste laborum reiciendis, nobis eveniet modi dolorem?</td>
+                <td class="righe">Lorem ipsum dolor</td>
+                <td class="righe">Lorem ipsum dolor</td>
+                <td class="righe">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, consequuntur vero! Pariatur ut in expedita adipisci, impedit vero nemo obcaecati aspernatur distinctio vitae, iste laborum reiciendis, nobis eveniet modi dolorem?</td>
             </tr>
-            <tr>
-                <td>Lorem ipsum dolor</td>
-                <td>Lorem ipsum dolor</td>
-                <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, consequuntur vero! Pariatur ut in expedita adipisci, impedit vero nemo obcaecati aspernatur distinctio vitae, iste laborum reiciendis, nobis eveniet modi dolorem?</td>
+            <tr class="colorata">
+                <td class="righe">Lorem ipsum dolor</td>
+                <td class="righe">Lorem ipsum dolor</td>
+                <td class="righe">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, consequuntur vero! Pariatur ut in expedita adipisci, impedit vero nemo obcaecati aspernatur distinctio vitae, iste laborum reiciendis, nobis eveniet modi dolorem?</td>
             </tr>
         </table>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro sunt explicabo quae voluptates, eum reprehenderit accusantium est ad maiores quidem vero dignissimos non suscipit. Porro veritatis quisquam hic vel quidem!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro sunt explicabo quae voluptates,<span>eum reprehenderit accusantium est ad maiores</span> quidem vero dignissimos non suscipit. Porro veritatis quisquam hic vel quidem!</p>
     </main>
 
     <footer>
         <h3>Potrebbero interessarti</h3>
-        <img src="img/monitor.jpg" alt="monitor">
-        <span>Lorem ipsum dolor</span>
-        <img src="img/graph.jpg" alt="graph">
-        <span>Lorem ipsum dolor</span>
+        <p class="foto1">Lorem ipsum dolor</p>
+        <p class="foto2">Lorem ipsum dolor</p>
     </footer>
 </body>
 </html>
